Add shares buying history table

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
 
   <div class="accordion">Shares buying history</div>
   <div class="accordion-content">
+    <table id="sharesHistory">
+      <thead>
+        <tr>
+          <th>Month</th>
+          <th>Price</th>
+          <th>Quantity (yours)</th>
+          <th>Quantity (for auto-buying strategy)</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+  </table>
+
     <p>
       <span id="status"></span><br>
       <span id="autoStatus"></span>
